--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.ico" sizes="16x16 32x32" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ParkScape Adventures</title>
 </head>
